# RNA_data

./: .gitignore  .gitmodules  Makefile  README.md  config.yaml  config_template.yaml  env_template  examples.ipynb  main.ipynb  pyproject.toml  requirements.txt  setup.py  setup.sh  test.fasta  tutorial.ipynb
.github/workflows/: CI.yml  publish.yml  pypi.yml  release.yml  sphinx.yml
DMS/: createFakeData.py  generate_dataset.py  util.py
DMS/fakeDMSdataset_generator/: README.md
DMS/fakeDMSdataset_generator/src/: rnastructure.py  util.py
RNA_embeddings/: generate_embeddings.sh
data/input_files_for_testing/: data.json  dreem_output.json  sequences.fasta
docs/: .coverage  conf.py  index.rst  installation.rst  modules.rst  profile.rst  usage.rst
rna_data/: __init__.py  config.py  create_dataset.py  datafolder.py  datapoint.py  datapoints.py  env.py  file_handlers.py  finder.py  info_file.py  list_datapoints.py  parsers.py  path.py  path_datafolder.py  path_dataset.py  rnastructure.py  util.py  write_npy.py
rouskinhf/: __init__.py  conversion.py  datafolder.py  datapoint.py  env.py  filter.py  hf.py  import_dataset_fun.py  info_file.py  list_datapoints.py  parsers.py  path.py  rnastructure.py  util.py
secondary_structure/: generate_dataset.py  util.py
sequence_dataset/: remove_duplicate.py  sequences_mid.fasta  sequences_small.fasta
temp/: temp.ct  temp.fasta  temp.pfs  temp.shape  temp_dot.txt  temp_prob.txt
tutorials/: convert.ipynb  create_from_local.ipynb  create_push_pull.ipynb  download.ipynb  huggingface.ipynb  use_for_models.ipynb
(+34 files in other folders)
