[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['rouskinhf']

[project]
name =  "rouskinhf"
version = "0.2.5"
authors = [
    {name = "Yves Martin", email = "yves@martin.yt"},
    {name = "Alberic de Lajarte", email = "albericlajarte@gmail.com"},
]
description = "A library to manipulate data for our DMS prediction models."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.10"

[tool.pytest.ini_options]
# add docstrings
addopts = "--doctest-modules --doctest-glob='*.py' -v --capture=no --envfile env"
pythonpath = [
  "src"
]
testpaths = ['tests', 'src']
junit_family = "xunit2"
